[watchOS] AVKitSPI build fixes https://bugs.webkit.org/show_bug.cgi?id=217070 <rdar://problem/69724883>

Rubber-stamped by Eric Carlson.

Source/WebCore/PAL:

* pal/spi/cocoa/AVKitSPI.h: Explicitly import AVPlayer.h and UIKit.h.

Tools:

* Scripts/configure-xcode-for-embedded-development: Copy AVKit headers for watchOS.


Canonical link: https://commits.webkit.org/229886@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267764 268f45cc-cd09-0410-ab3c-d52691b4dbfc